<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecorridasZO</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Mapa activity -->
    <string name="button_buscar">Buscar</string>
    <string name="button_guardar">Guardar</string>
    <string name="mapa">Mapa</string>
    <string name="title_activity_ver_persona">VerPersona</string>
    <string name="title_activity_formulario">FormularioActivity</string>
    <string name="title_activity_formulario_fragment">FormularioFragment</string>
    <string name="boton_ok">OK</string>
    <string name="labelNombre">Nombre:</string>
    <string name="nombre">Nombre</string>
    <string name="labelApellido">Apellido:</string>
    <string name="apellido">Apellido</string>
    <string name="labelDireccion">Dirección:</string>
    <string name="direccion">Dirección</string>
    <string name="labelZona">Zona:</string>
    <string name="zona">Zona</string>
    <string name="labelDescripcion">Descripción:</string>
    <string name="descripcion">Descripción</string>
    <string name="comentario">Comentario</string>
    <string name="sinDato">Sin Dato</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="servicio_no_disponible">Servicio no disponible</string>
    <string name="direccion_invalida">Dirección Inválida</string>
    <string name="error_conexion">Error de conexión</string>
    <string name="SubirAlServidor">Subir al servidor</string>
    <string name="Sincronizar">Sincronizar</string>
    <string name="BorrarDBLocal">Borrar DBLocal</string>
    <string name="RefrescarPantalla">Refrescar Pantalla</string>
    <string name="dispositivo_no_soportado">Dispositivo no soportado</string>
    <string name="subida_correcta">Subida correcta</string>
</resources>